<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_bar_allevents"
        android:icon="@android:drawable/ic_menu_slideshow"
        android:title="All Events" />

    <item
        android:id="@+id/nav_bar_myevents"
        android:icon="@android:drawable/ic_menu_add"
        android:title="My Events" />

    <item
        android:id="@+id/nav_bar_scanner"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="Scanner"/>

    <item
        android:id="@+id/nav_bar_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="Profile" />

</menu>