...
                android:fontFamily="monospace"
                android:text="@string/edit_profile"
                android:textColor="@color/background_blue"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/admin_navigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="are you an admin?"
                android:fontFamily="monospace"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white" />
...
