<resources>
    <string name="app_name">Elevent</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="all_events_title">All Events</string>
    <string name="my_events_title">My Events</string>
    <string name="scanner_title">Scanner</string>
    <string name="profile_title">Profile</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="spinner_hint">sort</string>


    <!-- options for event filter spinner -->
    <string-array name="event_filter_spinner_array">
        <item>all</item>
        <item>signed-up</item>
    </string-array>

    <!-- options for attendee filter spinner -->
    <string-array name="attendee_filter_spinner_array">
        <item>checked-in</item>
        <item>signed-up</item>
    </string-array>



    <string name="appbar_fragment_name" />
    <string name="notification_centre">notification centre</string>
    <string name="attendees">attendees</string>
    <string name="notification_centree">\nnotification centre</string>
    <string name="post_new_notification">post new notification</string>
    <string name="event_location">event description</string>
    <string name="most_recent_notification_attendee_eventview">who is ready for skruntskrunt</string>
    <string name="input_event_name">input event name</string>
    <string name="select_date">select date</string>
    <string name="set_time">set time</string>
    <string name="number">#</string>
    <string name="maximum_capacity">\ maximum capacity:</string>
    <string name="input_location">input location</string>
    <string name="add_image">add image</string>
    <string name="event_name">event name</string>
    <string name="location">location</string>
    <string name="date">date</string>
    <string name="name">name</string>
    <string name="time">time</string>
    <string name="description">description</string>
    <string name="share">share</string>
    <string name="manage">manage</string>
    <string name="create">create</string>
    <string name="edit">edit</string>
    <string name="check_in_nqr_code">check-in \nQR code</string>
    <string name="promotional_nqr_code">promotional \nQR code</string>
    <string name="check_in_and_promotional_qr_codes_will_be_generated_upon_event_creation">  clicking create without reusing QR codes will generate new check-in and promotional QR codes </string>
    <string name="home_page">home page</string>
    <string name="contact">contact info</string>
    <string name="save">save</string>
    <string name="edit_profile">edit profile</string>
    <string name="max_attendees">max attendees</string>
    <string name="namee">name</string>
    <string name="oops">Oops, \npage not found :(</string>
    <string name="spots_open">0 spots open</string>
    <string name="sign_up">sign up</string>
    <string name="spots_remaining">%d spots remaining</string>
    <string name="already_signed_up">Already Signed Up</string>
    <string name="event_full">Event Full</string>
    <string name="sign_up_for_event">Sign Up</string>
    <string-array name="image_categories">
        <item>Events</item>
        <item>Users</item>
    </string-array>

    <string name="map">map</string>
    <string name="max_attendees_set">max attendees set</string>
    <string name="no_max_limit_set">no max limit set</string>
    <string name="notify_per_check_ins">notify per check-ins</string>


</resources>