<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllEventsFragment"
    android:background="@color/item_grey">

    <!-- TODO: Update blank fragment layout -->
<!--  <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:text="All Events" />-->
    <!-- Wrap Spinner and ListView in a LinearLayout -->

    <FrameLayout
        android:id="@+id/allevents_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="8dp">

        <Spinner
            android:id="@+id/event_filter_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:spinnerMode="dropdown"
            android:entries="@array/event_filter_spinner_array"
            android:padding="30dp"
            />


        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:divider="@color/item_grey"
            android:dividerHeight="5dp"
            />
    </LinearLayout>
<!--    TEMPORARY BUTTON TO TEST FRAGMENT NAVIGATION
        REPLACE WITH EVENT ITEM CLICK FROM LIST VIEW    -->



</FrameLayout>


